--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,6 +23,7 @@ if (flutterVersionName == null) {
 }
 
 android {
+    compileSdkVersion 34
     namespace "com.example.quiz_app"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
